<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="wrap_content"
    android:layout_height="wrap_content"
    android:orientation="vertical"
    android:padding="16dp">

    <TextView
        android:id="@+id/back_confirm_dialog_title"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginBottom="8dp"
        android:layout_gravity="center_horizontal"
        android:text="@string/back_confirm"
        android:textSize="18sp"
        android:textStyle="bold" />

    <TextView
        android:id="@+id/back_confirm_dialog_message"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center_horizontal"
        android:text="@string/back_confirm_text"
        android:textSize="20sp"/>

    <TextView
        android:id="@+id/back_confirm_dialog_explainMessage"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center_horizontal"
        android:text="@string/back_confirm_explainText"
        android:textSize="15sp"/>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:layout_marginTop="16dp">

        <Button
            android:id="@+id/back_confirm_dialog_positive_button"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:layout_margin="1sp"
            android:text="@string/back_confirm_YesButton"
            android:textSize="10sp"/>

        <Button
            android:id="@+id/back_confirm_dialog_negative_button"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:layout_margin="1sp"
            android:text="@string/back_confirm_NoButton"
            android:textSize="10sp"/>

    </LinearLayout>

</LinearLayout>